# RememberIt

./: package-lock.json  package.json  svelte.config.js  vite.config.js
database/: database.db
src/: app.css  app.html  database.ts
src-tauri/: Cargo.toml  database.db  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2024-08-14-071728_create_question_collection/: down.sql  up.sql
src-tauri/migrations/2024-08-14-071736_create_question/: up.sql
src-tauri/migrations/2024-08-14-123925_create_collection/: down.sql  up.sql
src-tauri/migrations/2024-08-14-123925_create_parent_collection/: down.sql  up.sql
src-tauri/migrations/2024-08-14-123934_create_questions_collection/: up.sql
src-tauri/migrations/2024-08-14-123934_questions_collection/: down.sql  up.sql
src-tauri/migrations/2024-08-15-121622_create_reason/: up.sql
src-tauri/migrations/2024-08-15-121622_create_tag/: up.sql
src-tauri/migrations/2024-08-15-121632_create_question_reason/: down.sql  up.sql
src-tauri/migrations/2024-08-15-121632_create_question_tag/: down.sql  up.sql
src-tauri/src/: database.rs  lib.rs  models.rs  schema.rs
src-tauri/src/api/: collection.rs  mod.rs  parent_collection.rs  question.rs  question_collection.rs  question_reason.rs  question_tag.rs  reason.rs  tag.rs
src/lib/GenericComponents/: EditableText.svelte  Seperator.svelte
src/lib/components/: Badge.svelte  BadgeOption.svelte  (+4 more)
src/routes/: +page.svelte  active-parent-store.ts  active_collection_store.ts  selected-questions-store.ts  types.ts  winkwinkdatabase.ts
(+78 files in other folders)
